syntax = "proto3";

option go_package = "/pb";

package pb;

message AuthenticateRequest {
    string token = 1;
}

message AuthenticateResponse {
    string uid = 1;
}

service AuthService {
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}